--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,3 +1,50 @@
-<div class="container" id="main">
-    <h1>welcome</h1>
+<div id="main">
+    <header>
+        <img src="./assets/images/bg.webp" alt="bg img" class="img-fluid hero-bg">
+        <div class="container">
+            <h1>Collect data completely ad-free and anonymusly with <mark>EasySurvey</mark></h1>
+            <p class="slogan">No cookies or data leaks, transparent, built for university projects.</p>
+            <button id="download" class="button">Download</button>
+            <div class="hero">
+                <img src="./assets/images/hero.png" alt="" class="img-fluid">
+            </div>
+        </div>        
+    </header>
+    <section id="features">
+        <div class="container">
+            <h2>Discover EasySurvey <mark>transparency</mark></h2>
+            <div class="features-wrap">
+                <div class="feature">
+                    <div class="feature-header">
+                        <div class="feature-logo">
+                            <img src="./assets/images/f1.svg" alt="feature logo 1" class="img-fluid">
+                        </div>
+                        <p class="feature-counter">01</p>
+                    </div>
+                    <h3>Completely Ad-free</h3>
+                    <p class="feature-descr">Collect your project data in a very simple, transparent and ad-free way.</p>
+                </div>
+                <div class="feature">
+                    <div class="feature-header">
+                        <div class="feature-logo">
+                            <img src="./assets/images/f2.svg" alt="feature logo 2" class="img-fluid">
+                        </div>
+                        <p class="feature-counter">02</p>
+                    </div>
+                    <h3>No Cookies at all</h3>
+                    <p class="feature-descr">EasySurvey is completely free from any type of cookie, tracking or not.</p>
+                </div>
+                <div class="feature">
+                    <div class="feature-header">
+                        <div class="feature-logo">
+                            <img src="./assets/images/f3.svg" alt="feature logo 3" class="img-fluid">
+                        </div>
+                        <p class="feature-counter">03</p>
+                    </div>
+                    <h3>Completely Anonymus</h3>
+                    <p class="feature-descr">Only essantial data is stored, no user data is saved.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
