--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -1,3 +1,81 @@
 #main{
-    padding: 50px 20px;
+    text-align: center;
+}
+header{
+    position: relative;
+    padding: 6.25rem 0 3.75rem;
+}
+.hero-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    height: 70vh;
+}
+h1{
+    font-size: clamp(2rem, 7vw, 3.875rem);
+}
+h2{
+    font-size: clamp(1.5rem, 6vw, 3rem);
+}
+.slogan{
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    margin: 2rem 0;
+}
+.hero{
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 2rem;
+    padding: 10px; 
+}
+.hero img{
+    position: relative;
+}
+.hero::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    inset: 0;
+    background-color: rgba(255,255,255,0.1);
+    backdrop-filter: blur(5px);
+}
+#features{
+    padding: 7.5rem 0;
+    background-color: var(--dgray);
+}
+.features-wrap{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.feature{
+    width: calc(33% - 10px);
+    background-color: var(--bg);
+    border-radius: .625rem;
+    padding: 1.375rem;
+    border: 1px solid var(--gray);
+}
+.feature-header{
+    display: flex;
+    justify-content: space-between;
+}
+.feature-logo{
+    height: 50px;
+    aspect-ratio: 1/1;
+}
+.feature-counter{
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: var(--gray);
+}
+.feature h3{
+    text-align: left;
+    margin: 1rem 0;;
+}
+.feature-descr{
+    text-align: left;
 }
