--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,5 +2,8 @@
     <a href="/" class="logo">
         <img src="./assets/images/logo.svg" alt="alex logo" class="img-fluid">
     </a>
-    
+    <div class="nav-right-content-wrapper hide-tablet">
+        <a href="#/login" class="button secondary">Log in</a>
+        <a href="#/register" class="button">Sign up</a>
+    </div>
 </nav>
