--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,5 +1,5 @@
 <nav class="container" id="navbar">
-    <a href="/" class="logo">
+    <a href="./" class="logo">
         <img src="./assets/images/logo.svg" alt="alex logo" class="img-fluid">
     </a>
     <div class="nav-right-content-wrapper hide-tablet">
