--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -6,7 +6,9 @@
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
-
+*:focus{
+    outline: 1px solid var(--main-color);
+}
 :root {
     /*COLORS*/
     --bg: #090910;
@@ -40,6 +42,7 @@ body{
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 20px;
+    overflow-x: hidden;
 }
 .img-fluid{
     display: block;
@@ -67,6 +70,7 @@ mark{
     line-height: 1rem;
     text-decoration: none;
     cursor: pointer;
+    border: none;
 }
 .button.secondary{
     background-color: var(--gray);
