--- a/views/register.html
+++ b/views/register.html
@@ -8,8 +8,10 @@
         <form onsubmit="return false;" novalidate>
             <label for="un">Username *</label>
             <input type="text" id="un" name="un" required minlength="2" maxlength="20" placeholder="Your username">
+            <label for="un" class="error" id="un_err"></label>
             <label for="pw">Password *</label>
             <input type="text" id="pw" name="pw" required minlength="8" maxlength="20" placeholder="Your password">
+            <label for="pw" class="error" id="pw_err"></label>
             <button class="button">Sign up</button>
         </form>
         <p class="switch-form">Already have an account? <b><a href="#/register" class="form-link">Login here</a></b>.</p>   
