--- a/views/register.html
+++ b/views/register.html
@@ -10,7 +10,7 @@
             <input type="text" id="un" name="un" required minlength="2" maxlength="20" placeholder="Your username">
             <label for="un" class="error" id="un_err"></label>
             <label for="pw">Password *</label>
-            <input type="text" id="pw" name="pw" required minlength="8" maxlength="20" placeholder="Your password">
+            <input type="password" id="pw" name="pw" required minlength="8" maxlength="20" placeholder="Your password">
             <label for="pw" class="error" id="pw_err"></label>
             <button class="button">Sign up</button>
         </form>
