--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
             <label for="un">Username *</label>
             <input type="text" id="un" name="un" required minlength="2" maxlength="20" placeholder="Your username">
             <label for="pw">Password *</label>
-            <input type="text" id="pw" name="pw" required minlength="8" maxlength="20" placeholder="Your password">
+            <input type="password" id="pw" name="pw" required minlength="8" maxlength="20" placeholder="Your password">
             <button class="button">Login</button>
         </form>
         <p class="switch-form">Don't have an account? <b><a href="#/register" class="form-link">Sign up here</a></b>.</p>   
