--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
         </div>
         <h1>Welcome to <mark>EasySurvey</mark></h1>
         <h2>Login to continue.</h2>
-        <form onsubmit="return false;">
+        <form id="login-form" novalidate method="post">
             <label for="un">Username *</label>
             <input type="text" id="un" name="un" required minlength="2" maxlength="20" placeholder="Your username">
             <label for="pw">Password *</label>
