--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
         </div>
         <h1>Welcome to <mark>EasySurvey</mark></h1>
         <h2>Create an account.</h2>
-        <form id="sign-up-form" novalidate>
+        <form id="sign-up-form" novalidate method="post">
             <label for="un">Username *</label>
             <input type="text" id="un" name="un" required minlength="2" maxlength="20" placeholder="Your username">
             <label for="un" class="error" id="un_err"></label>
