--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -15,6 +15,7 @@
     --text: #fff;
     --gray: #45454f;
     --dgray: #121218;
+    --lgray: #1c1c21;
     --main-color: #33FFFF;
     --error: #f84646;
     /*FONTS*/
