--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -11,3 +11,7 @@
     display: block;
     height: 60px;
 }
+#navbar-auth{
+    background-color: var(--dgray);
+    border-bottom: 1px solid var(--gray);
+}
