--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,3 +1,19 @@
 <div id="main">
-    <h1>DASHBOARD</h1>
+    <aside id="sidebar">
+        <ul>
+            <li class="profile">
+                <div id="pic">AX</div>
+                <p id="un">Alex</p>
+            </li>
+            <li class="item active">Dashboard</li>
+            <li class="item">My surveys</li>
+            <li class="item">Create surveys</li>
+            <li class="item">Profile</li>
+        </ul>
+    </aside>
+    <div id="content">
+        <div class="dashboard">
+
+        </div>
+    </div>
 </div>
