--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,10 +5,10 @@
                 <div id="pic">AX</div>
                 <p id="un">Alex</p>
             </li>
-            <li class="item active">Dashboard</li>
-            <li class="item">My surveys</li>
-            <li class="item">Create surveys</li>
-            <li class="item">Profile</li>
+            <li class="item active"><img src="./assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
+            <li class="item"><img src="./assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
+            <li class="item"><img src="./assets/images/create_survey.svg" alt="" class="icon"><p class="item-name">Create surveys</p></li>
+            <li class="item"><img src="./assets/images/user.svg" alt="" class="icon"><p class="item-name">Profile</p></li>
         </ul>
     </aside>
     <div id="content">
