--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -13,7 +13,46 @@
     </aside>
     <div id="content">
         <div class="dashboard">
-
+            <div class="stat stat-50">
+                <p class="stat-title">Surveys made</p>
+                <div class="stat-body">
+                    <div class="stat-icon"><img src="./assets/images/surveys_made.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-content">
+                        <p class="stat-counter">2</p>
+                        <p class="stat-counting">surveys</p>
+                    </div>
+                </div>
+            </div>
+            <div class="stat stat-50">
+                <p class="stat-title">Surveys ongoing</p>
+                <div class="stat-body">
+                    <div class="stat-icon"><img src="./assets/images/surveys_ongoing.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-content">
+                        <p class="stat-counter">2</p>
+                        <p class="stat-counting">surveys</p>
+                    </div>
+                </div>
+            </div>
+            <div class="stat stat-50">
+                <p class="stat-title">Answers received</p>
+                <div class="stat-body">
+                    <div class="stat-icon"><img src="./assets/images/answer_made.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-content">
+                        <p class="stat-counter">2</p>
+                        <p class="stat-counting">answers</p>
+                    </div>
+                </div>
+            </div>
+            <div class="stat stat-50">
+                <p class="stat-title">Answers ongoing</p>
+                <div class="stat-body">
+                    <div class="stat-icon"><img src="./assets/images/answer_ongoing.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-content">
+                        <p class="stat-counter">2</p>
+                        <p class="stat-counting">answers</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
