--- a/views/create.html
+++ b/views/create.html
@@ -5,10 +5,10 @@
                 <div id="pic">AX</div>
                 <p id="un">Alex</p>
             </li>
-            <li onclick="top.location.href = `${domain}/#/dashboard`" class="item"> <img src="./assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
-            <li onclick="top.location.href = `${domain}/#/surveys`" class="item" ><img src="./assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
-            <li onclick="top.location.href = `${domain}/#/create`" class="item active" ><img src="./assets/images/create_survey.svg" alt="" class="icon"><p class="item-name">Create surveys</p></li>
-            <li onclick="top.location.href = `${domain}/#/profile`" class="item" ><img src="./assets/images/user.svg" alt="" class="icon"><p class="item-name">Profile</p></li>
+            <li onclick="top.location.href = `#/dashboard`" class="item"> <img src="./assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
+            <li onclick="top.location.href = `#/surveys`" class="item" ><img src="./assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
+            <li onclick="top.location.href = `#/create`" class="item active" ><img src="./assets/images/create_survey.svg" alt="" class="icon"><p class="item-name">Create surveys</p></li>
+            <li onclick="top.location.href = `#/profile`" class="item" ><img src="./assets/images/user.svg" alt="" class="icon"><p class="item-name">Profile</p></li>
         </ul>
     </aside>
     <div id="content">
