--- a/assets/css/create.css
+++ b/assets/css/create.css
@@ -34,6 +34,7 @@ body{
     column-gap: 12px;
     align-items: center;
     padding: 15px 0;
+    text-transform: capitalize;
 }
 #pic{
     width: 40px;
@@ -44,6 +45,7 @@ body{
     background-color: var(--main-color);
     color: var(--bg);
     font-size: 1.4rem;
+    text-transform: uppercase;
 }
 #sidebar li.item{
     padding: 10px 20px;
