--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="container" id="navbar">
-    <a href="./" class="logo">
-        <img src="./assets/images/logo.svg" alt="alex logo" class="img-fluid">
+    <a href="/easy-survey/" class="logo">
+        <img src="/easy-survey/assets/images/logo.svg" alt="alex logo" class="img-fluid">
     </a>
     <div class="nav-right-content-wrapper hide-tablet">
         <a href="#/login" class="button secondary">Log in</a>
