--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,10 +5,10 @@
                 <div id="pic">AX</div>
                 <p id="un">Alex</p>
             </li>
-            <li onclick="top.location.href = `#/dashboard`" class="item active"> <img src="./assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
-            <li onclick="top.location.href = `#/surveys`" class="item" ><img src="./assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
-            <li onclick="top.location.href = `#/create`" class="item" ><img src="./assets/images/create_survey.svg" alt="" class="icon"><p class="item-name">Create surveys</p></li>
-            <li onclick="top.location.href = `#/profile`" class="item" ><img src="./assets/images/user.svg" alt="" class="icon"><p class="item-name">Profile</p></li>
+            <li onclick="top.location.href = `#/dashboard`" class="item active"> <img src="/easy-survey/assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
+            <li onclick="top.location.href = `#/surveys`" class="item" ><img src="/easy-survey/assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
+            <li onclick="top.location.href = `#/create`" class="item" ><img src="/easy-survey/assets/images/create_survey.svg" alt="" class="icon"><p class="item-name">Create surveys</p></li>
+            <li onclick="top.location.href = `#/profile`" class="item" ><img src="/easy-survey/assets/images/user.svg" alt="" class="icon"><p class="item-name">Profile</p></li>
         </ul>
     </aside>
     <div id="content">
@@ -16,7 +16,7 @@
             <div class="stat stat-50">
                 <p class="stat-title">Surveys made</p>
                 <div class="stat-body">
-                    <div class="stat-icon"><img src="./assets/images/surveys_made.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-icon"><img src="/easy-survey/assets/images/surveys_made.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
                         <p class="stat-counter">2</p>
                         <p class="stat-counting">surveys</p>
@@ -26,7 +26,7 @@
             <div class="stat stat-50">
                 <p class="stat-title">Surveys ongoing</p>
                 <div class="stat-body">
-                    <div class="stat-icon"><img src="./assets/images/surveys_ongoing.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-icon"><img src="/easy-survey/assets/images/surveys_ongoing.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
                         <p class="stat-counter">2</p>
                         <p class="stat-counting">surveys</p>
@@ -36,7 +36,7 @@
             <div class="stat stat-50">
                 <p class="stat-title">Answers received</p>
                 <div class="stat-body">
-                    <div class="stat-icon"><img src="./assets/images/answer_made.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-icon"><img src="/easy-survey/assets/images/answer_made.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
                         <p class="stat-counter">2</p>
                         <p class="stat-counting">answers</p>
@@ -46,7 +46,7 @@
             <div class="stat stat-50">
                 <p class="stat-title">Answers ongoing</p>
                 <div class="stat-body">
-                    <div class="stat-icon"><img src="./assets/images/answer_ongoing.svg" alt="stat icon" class="img-fluid"></div>
+                    <div class="stat-icon"><img src="/easy-survey/assets/images/answer_ongoing.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
                         <p class="stat-counter">2</p>
                         <p class="stat-counting">answers</p>
