--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,7 @@
 <div id="main">
     <div class="form-wrapper">
         <div class="logo">
-            <img src="./assets/images/logo.svg" alt="alex logo" class="img-fluid">
+            <img src="/easy-survey/assets/images/logo.svg" alt="alex logo" class="img-fluid">
         </div>
         <h1>Welcome to <mark>EasySurvey</mark></h1>
         <h2>Create an account.</h2>
