--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,11 +1,11 @@
 <div id="main">
     <header>
-        <img src="./assets/images/bg.webp" alt="bg img" class="img-fluid hero-bg">
+        <img src="/easy-survey/assets/images/bg.webp" alt="bg img" class="img-fluid hero-bg">
         <div class="container">
             <h1>Collect data completely ad-free and anonymusly with <mark>EasySurvey</mark></h1>
             <p class="slogan">No cookies or data leaks, transparent, built for university projects.</p>
             <div class="hero">
-                <img src="./assets/images/hero.png" alt="" class="img-fluid">
+                <img src="/easy-survey/assets/images/hero.png" alt="" class="img-fluid">
             </div>
         </div>
     </header>
@@ -16,7 +16,7 @@
                 <div class="feature">
                     <div class="feature-header">
                         <div class="feature-logo">
-                            <img src="./assets/images/f1.svg" alt="feature logo 1" class="img-fluid">
+                            <img src="/easy-survey/assets/images/f1.svg" alt="feature logo 1" class="img-fluid">
                         </div>
                         <p class="feature-counter">01</p>
                     </div>
@@ -26,7 +26,7 @@
                 <div class="feature">
                     <div class="feature-header">
                         <div class="feature-logo">
-                            <img src="./assets/images/f2.svg" alt="feature logo 2" class="img-fluid">
+                            <img src="/easy-survey/assets/images/f2.svg" alt="feature logo 2" class="img-fluid">
                         </div>
                         <p class="feature-counter">02</p>
                     </div>
@@ -36,7 +36,7 @@
                 <div class="feature">
                     <div class="feature-header">
                         <div class="feature-logo">
-                            <img src="./assets/images/f3.svg" alt="feature logo 3" class="img-fluid">
+                            <img src="/easy-survey/assets/images/f3.svg" alt="feature logo 3" class="img-fluid">
                         </div>
                         <p class="feature-counter">03</p>
                     </div>
