--- a/components/navbar-auth.html
+++ b/components/navbar-auth.html
@@ -1,5 +1,5 @@
 <nav id="navbar-auth">
     <a href="#/dashboard" class="logo">
-        <img src="./assets/images/logo.svg" alt="alex logo" class="img-fluid">
+        <img src="/easy-survey/assets/images/logo.svg" alt="alex logo" class="img-fluid">
     </a>
 </nav>
