--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -2,8 +2,8 @@
     <aside id="sidebar">
         <ul>
             <li class="profile">
-                <div id="pic">AX</div>
-                <p id="un">Alex</p>
+                <div id="pic">ES</div>
+                <p id="un">EasySurvey</p>
             </li>
             <li onclick="top.location.href = `#/dashboard`" class="item active"> <img src="/easy-survey/assets/images/dashboard.svg" alt="" class="icon"><p class="item-name">Dashboard</p></li>
             <li onclick="top.location.href = `#/surveys`" class="item" ><img src="/easy-survey/assets/images/surveys.svg" alt="" class="icon"><p class="item-name">My surveys</p></li>
@@ -13,42 +13,42 @@
     </aside>
     <div id="content">
         <div class="dashboard">
-            <div class="stat stat-50">
+            <div class="stat stat-50" id="s_all_time">
                 <p class="stat-title">Surveys made</p>
                 <div class="stat-body">
                     <div class="stat-icon"><img src="/easy-survey/assets/images/surveys_made.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
-                        <p class="stat-counter">2</p>
+                        <p class="stat-counter">-</p>
                         <p class="stat-counting">surveys</p>
                     </div>
                 </div>
             </div>
-            <div class="stat stat-50">
+            <div class="stat stat-50" id="s_ongoing">
                 <p class="stat-title">Surveys ongoing</p>
                 <div class="stat-body">
                     <div class="stat-icon"><img src="/easy-survey/assets/images/surveys_ongoing.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
-                        <p class="stat-counter">2</p>
+                        <p class="stat-counter">-</p>
                         <p class="stat-counting">surveys</p>
                     </div>
                 </div>
             </div>
-            <div class="stat stat-50">
+            <div class="stat stat-50" id="a_all_time">
                 <p class="stat-title">Answers received</p>
                 <div class="stat-body">
                     <div class="stat-icon"><img src="/easy-survey/assets/images/answer_made.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
-                        <p class="stat-counter">2</p>
+                        <p class="stat-counter">-</p>
                         <p class="stat-counting">answers</p>
                     </div>
                 </div>
             </div>
-            <div class="stat stat-50">
+            <div class="stat stat-50" id="a_ongoing">
                 <p class="stat-title">Answers ongoing</p>
                 <div class="stat-body">
                     <div class="stat-icon"><img src="/easy-survey/assets/images/answer_ongoing.svg" alt="stat icon" class="img-fluid"></div>
                     <div class="stat-content">
-                        <p class="stat-counter">2</p>
+                        <p class="stat-counter">-</p>
                         <p class="stat-counting">answers</p>
                     </div>
                 </div>
