--- a/assets/css/surveys.css
+++ b/assets/css/surveys.css
@@ -106,6 +106,11 @@ li.item.active .icon{
 .stat-50{
     width: calc(50% - 5px);
 }
+.none{
+    opacity: .5;
+    text-align: center;
+    padding-top: 2rem;
+}
 @media screen and (max-width: 750px){
     #sidebar{
         width: 50px;
