--- a/views/create.html
+++ b/views/create.html
@@ -18,17 +18,23 @@
             <label for="title">Title *</label>
             <input type="text" id="title" required minlength="2" maxlength="512" placeholder="Survey Title">
             <label for="hero">Title Image</label>
-            <div id="progress"></div>
-            <div id="progressBar"></div>
-            <div class="row">
-                <div class="col-6">
-                    <input type="file" class="input-file my-2" id="hero">
-                </div>
-                <div class="col-6">
-                    <input type="text" class="text-right" readonly>
+            <div class="uploader">
+                <div id="progress"></div>
+                <div id="progressBar"></div>
+                <div class="row">
+                    <div class="col-6">
+                        <input type="file" class="input-file my-2" id="hero">
+                    </div>
+                    <div class="col-6">
+                        <input type="text" class="text-right" readonly>
+                    </div>
                 </div>
             </div>
-            <button class="button">Login</button>
+            <button class="button">Add instructions</button>
+            <button class="button">Add introductions</button>
+            <button class="button">Start steps</button>
+            <button class="button">Cancel</button>
+            <button class="button">Save</button>
         </form>
     </div>
 </div>
